--- a/index.html
+++ b/index.html
@@ -8,29 +8,41 @@
 	</head>
 	<body>
 		<h1 class="title">Book Library</h1>
-		<button>Add a Book</button>
-		<form class="form">
-			<label for="title">Title</label>
-			<input type="text" placeholder="Book title" id="title" required />
+		<div class="addButton">
+			<button class="addBook">Add a Book</button>
+		</div>
+		<div class="form">
+			<form class="formTag">
+				<label for="title">Title</label>
+				<input
+					type="text"
+					placeholder="Book title"
+					id="title"
+					required />
 
-			<label for="author">Author</label>
-			<input
-				type="text"
-				placeholder="Author's Name"
-				id="author"
-				required />
+				<label for="author">Author</label>
+				<input
+					type="text"
+					placeholder="Author's Name"
+					id="author"
+					required />
 
-			<label for="pages">Number of Pages</label>
-			<input type="number" placeholder="Pages" id="pages" required />
+				<label for="pages">Number of Pages</label>
+				<input type="number" placeholder="Pages" id="pages" required />
 
-			<label for="check">Read</label>
-			<input type="checkbox" id="check" />
+				<div class="checkbox">
+					<input type="checkbox" id="check" />
+					<label for="check">Read</label>
+				</div>
 
-			<div class="formButtons">
-				<button class="saveButton">Save</button>
-				<button class="cancelButton">Cancel</button>
-			</div>
-		</form>
+				<div class="formButtons">
+					<button class="saveButton">Save</button>
+					<button class="cancelButton">Cancel</button>
+				</div>
+			</form>
+		</div>
+
+		<ul class="allBooks"></ul>
 		<script src="app.js"></script>
 	</body>
 </html>
